2001-10-08  Rob Browning  <rlb@defaultvalue.org>

	* gc.c: support ia64 register backing store.
	(SCM_MARK_BACKING_STORE): new macro.

	* continuations.h: support ia64 register backing store.
	(struct scm_t_contregs): add ia64 register backing store.

	* continuations.c: support ia64 register backing store.
	(continuation_mark): mark ia64 register backing store.
	(continuation_free): free ia64 register backing store.
	(scm_make_continuation): capture ia64 register backing store.
	(copy_stack_and_call): copy ia64 register backing store.

2001-10-06  Mikael Djurfeldt  <mdj@linnaeus>

	These changes fixes a race condition in the Guile coop - pthread
	compatibility code.
	
	* coop.c (mother_awake_p): New variable.
	(coop_create): Set mother_awake_p before creating or signalling
	mother; wait until mother is going to sleep before returning.
	(mother): Reset mother_awake_p before going to sleep.

2001-10-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h:  Removed old comment about using SCM_CAR to access
	non-pair cells.

	(SCM_MOST_POSITIVE_FIXNUM, SCM_MOST_NEGATIVE_FIXNUM):  Make sure
	the return value is signed.  Thanks to Brian Crowder for the bug
	report.

	(SCM_SRS):  Avoid unnecessary casting and don't unpack input
	values.  With this patch, SCM_SRS can be safely used for other
	types than scm_t_signed_bits.  However, it should still better be
	an internal macro and thus be renamed to SCM_I_SRS.

	(SCM_MAKINUM, SCM_INUM):  Use proper casting.

2001-10-04  Thien-Thi Nguyen  <ttn@glug.org>

	* error.c (scm_wta): Replace `intptr_t' use w/ `scm_t_bits'.
	Thanks to I. N. Golubev.

2001-10-03  Gary Houston  <ghouston@arglist.com>

	* continuations.h, unif.h: in the descriptions of the bit patterns
	of the heap cells, make bit 0 the least significant.

2001-09-25  Thien-Thi Nguyen  <ttn@glug.org>

	* chars.h (SCM_MAKE_CHAR): Use `scm_t_bits' instead of `intptr_t'.
	Thanks to Golubev I. N.

2001-09-25  Gary Houston  <ghouston@arglist.com>
